Revert "追加 诊断器环境"
This reverts commit d0072ca0